--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,7 +15,8 @@ jobs:
       - uses: Platane/snk@v3
         with:
           github_user_name: BeyzaSimsekk
-          outputs: dist/github-contribution-grid-snake.svg
+          outputs: |
+            dist/github-contribution-grid-snake.svg?palette=github-dark&color_snake=#e861c9&background=#000000
           
       - name: push snake
         uses: crazy-max/ghaction-github-pages@v3.1.0
