--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           github_user_name: BeyzaSimsekk
           outputs: |
-            dist/github-contribution-grid-snake.svg?palette=github-dark&color_snake=#e861c9&background=#000000
+            dist/github-snake-dark.svg?palette=github-dark
           
       - name: push snake
         uses: crazy-max/ghaction-github-pages@v3.1.0
